--- a/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
@@ -26,7 +26,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <GridPane fx:id="grid_pane_login" >
+        <GridPane fx:id="grid_pane_login">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.33331298828125" minWidth="10.0" prefWidth="296.6666259765625" />
@@ -250,7 +250,7 @@
                 </VBox>
             </children>
         </GridPane>
-        <GridPane fx:id="register_logo_pane" visible="false" prefHeight="200.0" prefWidth="200.0">
+        <GridPane fx:id="register_logo_pane" prefHeight="200.0" prefWidth="200.0" visible="false">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.66666666666663" minWidth="10.0" prefWidth="276.0" />
