--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -18,7 +17,7 @@
     <children>
         <GridPane fx:id="grid" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="230.0" minWidth="200.0" prefWidth="200.0" />
                 <ColumnConstraints hgrow="ALWAYS" minWidth="400.0" prefWidth="600.0" />
             </columnConstraints>
             <rowConstraints>
@@ -27,12 +26,12 @@
             <children>
                 <AnchorPane minWidth="186.0" prefHeight="500.0" prefWidth="186.0" style="-fx-background-color: white;" styleClass="main_pane" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                     <children>
-                        <ImageView fitHeight="72.0" fitWidth="110.0" layoutX="47.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="47.0" AnchorPane.topAnchor="17.0">
+                        <ImageView fitHeight="72.0" fitWidth="135.0" layoutX="47.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="47.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="17.0">
                             <image>
                                 <Image url="@../images/iims_logo.png" />
                             </image>
                         </ImageView>
-                        <Text fx:id="username" layoutX="1.0" layoutY="160.96875" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER" wrappingWidth="199.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="145.5">
+                        <Text fx:id="username" layoutX="1.0" layoutY="160.96875" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER" wrappingWidth="199.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="145.5">
                             <font>
                                 <Font name="Serif Bold" size="16.0" />
                             </font>
@@ -77,8 +76,7 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                        <Line endX="100.0" layoutX="100.0" layoutY="174.0" startX="-100.0" stroke="#eeeeee" />
-                        <Label layoutX="24.0" layoutY="92.0" prefHeight="19.0" prefWidth="154.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="INTEGRATED INFORMATION" textAlignment="CENTER" wrapText="true">
+                        <Label alignment="CENTER" layoutX="1.0" layoutY="92.0" prefHeight="19.0" prefWidth="199.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="INTEGRATED INFORMATION" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -95,7 +93,7 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                  <Label layoutX="24.0" layoutY="109.0" prefHeight="19.0" prefWidth="154.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="MANAGEMENT SYSTEM" textAlignment="CENTER" wrapText="true">
+                  <Label alignment="CENTER" layoutY="109.0" prefHeight="19.0" prefWidth="199.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="MANAGEMENT SYSTEM" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
